--- a/Skyhacks2020(1).ipynb
+++ b/Skyhacks2020(1).ipynb
@@ -282,7 +282,7 @@
    "outputs": [],
    "source": [
     "big_object = Diff(train_labels.columns, small_object)\n",
-    "train_labels_SO = train_labels[big_object]"
+    "train_labels_BO = train_labels[big_object]"
    ]
   },
   {
@@ -316,7 +316,14 @@
    "outputs": [],
    "source": [
     "labels = train_labels.columns\n",
-    "targets = train_labels.to_numpy()"
+    "targets = train_labels.to_numpy()\n",
+    "\n",
+    "labels_SO = train_labels_SO.columns\n",
+    "targets_SO = train_labels_SO.to_numpy()\n",
+    "\n",
+    "\n",
+    "labels_BO = train_labels_BO.columns\n",
+    "targets_BO = train_labels_BO.to_numpy()"
    ]
   },
   {
@@ -376,7 +383,9 @@
    },
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(imgset, targets, test_size=0.2, random_state = 42)"
+    "X_train, X_test, y_train, y_test = train_test_split(imgset, targets, test_size=0.2, random_state = 42)\n",
+    "X_SO_train, X_SO_test, y_SO_train, y_SO_test = train_test_split(imgset, targets_SO, test_size=0.2, random_state = 42)\n",
+    "X_BO_train, X_BO_test, y_BO_train, y_BO_test = train_test_split(imgset, targets_BO, test_size=0.2, random_state = 42)"
    ]
   },
   {
