--- a/Skyhacks2020(1).ipynb
+++ b/Skyhacks2020(1).ipynb
@@ -136,7 +136,49 @@
    },
    "outputs": [],
    "source": [
-    "train_labels = pd.read_csv('training_labels.csv')"
+    "train_labels = pd.read_csv('training_labels.csv')\n",
+    "#ściezka do folderu ze zdjęciami\n",
+    "filenames = os.listdir()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_labels.set_index('Name',inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "small_object = ['Animals','Bench','Cross', 'Food', 'Footpath', 'Furniture', 'Monument','Motor vehicle','Person','Plants','Road', 'Rocks','Stairs','Trees','Windows']\n",
+    "train_labels_SO = train_labels[small_object]\n",
+    "\n",
+    "big_object = Diff(train_labels.columns, small_object)\n",
+    "train_labels_BO = train_labels[big_object]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.utils import shuffle\n",
+    "\n",
+    "def shuffle(filename, label, random_state = 2020):\n",
+    "    filenames_shuffled, labels_shuffled = shuffle(filename, label, random_state)\n",
+    "    #Do rozważenia w razie czego\n",
+    "    # saving the shuffled file.\n",
+    "    # you can load them later using np.load().\n",
+    "    #np.save('labels_shuffled.npy', labels_shuffled)\n",
+    "    #np.save('filenames_shuffled.npy', filenames_shuffled)\n",
+    "    return filenames_shuffled, labels_shuffled"
    ]
   },
   {
@@ -147,29 +189,10 @@
    },
    "outputs": [],
    "source": [
-    "os.chdir('training_images')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "id": "ka_TsKhn962k"
-   },
-   "outputs": [],
-   "source": [
-    "input_shape = (96,96,3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "id": "zTBgGGNY9__v"
-   },
-   "outputs": [],
-   "source": [
-    "train_labels.set_index('Name',inplace=True)"
+    "random  = 1515\n",
+    "file_shuffled, BO_shuffled = shuffle(filename, train_labels_BO, random)\n",
+    "file_shuffled, SO_shuffled = shuffle(filename, train_labels_SO, random)\n",
+    "file_shuffled, shuffled = shuffle(filename, train_labels, random)"
    ]
   },
   {
@@ -240,18 +263,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "small_object = ['Animals','Bench','Cross', 'Food', 'Footpath', 'Furniture', 'Monument','Motor vehicle','Person','Plants','Road', 'Rocks','Stairs','Trees','Windows']\n",
-    "train_labels_SO = train_labels[small_object]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "ename": "ValueError",
@@ -273,16 +288,6 @@
     "li1 = [10, 15, 20, 25, 30, 35, 40]\n",
     "li2 = [25, 40, 35]\n",
     "print(Diff(li1, li2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "big_object = Diff(train_labels.columns, small_object)\n",
-    "train_labels_BO = train_labels[big_object]"
    ]
   },
   {
@@ -315,6 +320,7 @@
    },
    "outputs": [],
    "source": [
+    "#chyba niepotrzebne\n",
     "labels = train_labels.columns\n",
     "targets = train_labels.to_numpy()\n",
     "\n",
@@ -353,6 +359,7 @@
     }
    ],
    "source": [
+    "#niepotrzebne\n",
     "imgset = []\n",
     "\n",
     "for name in train_labels.index:\n",
@@ -383,10 +390,58 @@
    },
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(imgset, targets, test_size=0.2, random_state = 42)\n",
-    "X_SO_train, X_SO_test, y_SO_train, y_SO_test = train_test_split(imgset, targets_SO, test_size=0.2, random_state = 42)\n",
-    "X_BO_train, X_BO_test, y_BO_train, y_BO_test = train_test_split(imgset, targets_BO, test_size=0.2, random_state = 42)"
+    "X_train, X_test, y_train, y_test = train_test_split(filename_shuffled, shuffled, test_size=0.2, random_state = 42)\n",
+    "X_SO_train, X_SO_test, y_SO_train, y_SO_test = train_test_split(filename_shuffled, SO_shuffled, test_size=0.2, random_state = 42)\n",
+    "X_BO_train, X_BO_test, y_BO_train, y_BO_test = train_test_split(filename_shuffled, BO_shuffled, test_size=0.2, random_state = 42)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class My_Custom_Generator(keras.utils.Sequence) :\n",
+    "  \n",
+    "  def __init__(self, image_filenames, labels, batch_size) :\n",
+    "    self.image_filenames = image_filenames\n",
+    "    self.labels = labels\n",
+    "    self.batch_size = batch_size\n",
+    "    \n",
+    "    \n",
+    "  def __len__(self) :\n",
+    "    return (np.ceil(len(self.image_filenames) / float(self.batch_size))).astype(np.int)\n",
+    "  \n",
+    "  \n",
+    "  def __getitem__(self, idx) :\n",
+    "    batch_x = self.image_filenames[idx * self.batch_size : (idx+1) * self.batch_size]\n",
+    "    batch_y = self.labels[idx * self.batch_size : (idx+1) * self.batch_size]\n",
+    "    \n",
+    "    return np.array([\n",
+    "            resize(imread('/content/all_images/' + str(file_name)), (80, 80, 3))\n",
+    "               for file_name in batch_x])/255.0, np.array(batch_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 32\n",
+    "\n",
+    "my_training_batch_generator = My_Custom_Generator(X_train, y_train, batch_size)\n",
+    "my_test_batch_generator = My_Custom_Generator(X_test, y_test, batch_size)\n",
+    "\n",
+    "#i analogicznie dla mniejszych modeli"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -856,7 +911,12 @@
     }
    ],
    "source": [
-    "model.fit(X_train,y_train,validation_data=(X_test,y_test), epochs=12, callbacks = [EarlyStop], batch_size = 16)  "
+    "model.fit_generator(generator = my_training_batch_generator,\n",
+    "                    steps_per_epoch = int(3800 // batch_size) #dobrać by rozmiar się zgadzał, \n",
+    "                    epochs=12, callbacks = [EarlyStop],\n",
+    "                    validation_data = my_test_batch_generator,\n",
+    "                    validation_steps = int(950//batch_size) #dobrać by rozmiar się zgadzał,   \n",
+    "#model.fit(X_train,y_train,validation_data=(X_test,y_test), epochs=12, callbacks = [EarlyStop], batch_size = 16)  "
    ]
   },
   {
@@ -890,13 +950,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 0, 3, 0, 5, 6])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([1,2,3,4,5,6])\n",
+    "a[[1,3]] = [0, 0]\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "id": "skU5p4eeg9Dd"
    },
    "outputs": [],
    "source": [
-    "model."
+    "def final_results(pred1, pred2):\n",
+    "    result = np.empty([pred1.shape[0], pred1.shape[1]+pred2.shape[1]])\n",
+    "    for i in range(pred1.shape[0]):\n",
+    "        result[i,[0,3,4,5,6,7,9,12,14,15,16,17,18,21,22,23,24,27,31,32,33,36]] = pred1[i]\n",
+    "        result[i,[1,2,8,10,11,13,19,20,25,26,28,29,30,34,35,38]]\n",
+    "    return result\n",
+    "        "
    ]
   }
  ],
