Displacy for app

--- a/Audio-model1.ipynb
+++ b/Audio-model1.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,16 +35,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "33"
+       "160"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,16 +64,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'park rozrywki': 'lemat', 'zwierzęta': 'timestamp', 'ławka': 'is_in_topics'}"
+       "{'park rozrywki': 'Amusement park',\n",
+       " 'zwierzęta': 'Animals',\n",
+       " 'ławka': 'Bench',\n",
+       " 'budynek': 'Building',\n",
+       " 'zamek': 'Castle',\n",
+       " 'jaskinia': 'Cave',\n",
+       " 'kościół': 'Church',\n",
+       " 'miasto': 'City',\n",
+       " 'krzyż': 'Cross',\n",
+       " 'kultura': 'Cultural institution',\n",
+       " 'jedzenie': 'Food',\n",
+       " 'chodnik': 'Footpath',\n",
+       " 'las': 'Forest',\n",
+       " 'meble': 'Furniture',\n",
+       " 'trawa': 'Grass',\n",
+       " 'cmentarz': 'Graveyard',\n",
+       " 'jezioro': 'Lake',\n",
+       " 'kopalnia': 'Landscape',\n",
+       " 'pomnik': 'Mine',\n",
+       " 'pojazd': 'Monument',\n",
+       " 'góry': 'Motor vehicle',\n",
+       " 'muzeum': 'Mountains',\n",
+       " 'skansen': 'Museum',\n",
+       " 'park': 'Open-air museum',\n",
+       " 'osoba': 'Park',\n",
+       " 'rośliny': 'Person',\n",
+       " 'rezerwuar': 'Plants',\n",
+       " 'rzeka': 'Reservoir',\n",
+       " 'droga': 'River',\n",
+       " 'skały': 'Road',\n",
+       " 'śnieg': 'Rocks',\n",
+       " 'sport': 'Snow',\n",
+       " 'obiekt sportowy': 'Sport',\n",
+       " 'schody': 'Sports facility',\n",
+       " 'drzewa': 'Stairs',\n",
+       " 'statek': 'Trees',\n",
+       " 'okna': 'Watercraft'}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
